--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "next": "15.5.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "openai": "^4.73.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.14",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "prettier": "^3.3.3"
   }
 }
